--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,12 @@
-# ---------------------------------------------------------
-# Общие правила игнорирования для репозитория студента
-# ---------------------------------------------------------
+# Python
+.venv/
+__pycache__/
+*.pyc
+.python-version
 
-# Системные файлы ОС
-.DS_Store
-Thumbs.db
+homeworks/HW03/eda-cli/reports_*/
+homeworks/HW03/eda-cli/*.log
 
-# Конфигурации IDE/редакторов
+# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-
-# Виртуальные окружения Python
-.venv/
-venv/
-env/
-ENV/
-.conda/
-.venv*/
-
-# Кеши Python и скомпилированные файлы
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Папки и файлы сборки/дистрибуции (если вдруг появятся)
-build/
-dist/
-eggs/
-*.egg-info/
-.installed.cfg
-
-# Кеши и артефакты тестов
-.pytest_cache/
-.coverage
-.coverage.*
-htmlcov/
-
-# Журналы
-*.log
-logs/
-
-# Кеши Jupyter Notebook
-.ipynb_checkpoints
-
-# Файлы окружения и конфигурации с потенциальными секретами
-.env
-*.env
-.env.*
-!.env.example
-
-# Разное
-*.tmp
-*.bak
-*.old
